Tests/Runtime2/Error/InHandler/OuterHandler.goal
OuterHandler
/ catches the propagated error from BadHandler
- set %outerHandled% = true
